# sasy-guard

./: Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
docs-site/: astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
docs-site/src/content/docs/: claude-code.mdx  index.mdx  why-sasy-guard.mdx
plugins/sasy-guard/: README.md  init-project.sh
plugins/sasy-guard/.claude-plugin/: plugin.json
plugins/sasy-guard/auth/: auth_config.yaml
plugins/sasy-guard/commands/: policy.md  setup.md  status.md
plugins/sasy-guard/hooks/: hooks.json
plugins/sasy-guard/profiles/: deny-all.dl  security.dl
plugins/sasy-guard/scripts/: lib.sh  posttooluse.sh  pretooluse.sh  session-end.sh  session-start.sh
src/demo/cc_guard/: __init__.py  __main__.py  daemon.py  display.py  fixtures.py  hook_tap.py  mock_anthropic.py  runner.py  scenarios.py  serve_mock.py  util.py
