[project]
name = "sasy-guard-demo"
version = "0.1.0"
description = "Sasy Guard — Claude Code guard demo harness (real claude x mock model)"
requires-python = ">=3.11"
dependencies = [
    "sasy>=0.4.9",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "docstring-parser>=0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]
